--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <p>Hello this is a person</p>
 <h1>This is a suspicious header</h1>
-<img src="BMW" alt="BMW" height="300" width="300 border="15px"></img>
+<img src="BMW.webp" alt="BMW" height="300" width="300 border="15px"></img>
