--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <p>Hello this is a person</p>
 <h1>This is a suspicious header</h1>
-<img src="bmw.jpg" alt="BMW" height="300" width="300 border="15px">
+<img src="bmw.jpg" alt="BMW" height="300" width="300 border="25px">
+<img src="mclaren.webp alt="Mclaren" height="300" width="300" border="25px">
