--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<p>Hello this is a person</p>
+<!DOCTYPE html>
+<title>Start of website</title>
 <h1>This is a suspicious header</h1>
 <img src="bmw.jpg" alt="BMW" height="300" width="300 border="25px">
 <p>Tarsier</p>
