--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
+<html>
+<head>
 <title>Start of website</title>
+</head>
+</body>
 <h1>This is a suspicious header</h1>
 <img src="bmw.jpg" alt="BMW" height="300" width="300 border="25px">
 <p>Tarsier</p>
-
+</body>
+</html>
