--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Start of website</title>
 </head>
-</body>
+<body>
 <h1>This is a suspicious header</h1>
 <img src="bmw.jpg" alt="BMW" height="300" width="300 border="25px">
 <p>Tarsier</p>
