--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Start of website</title>
+	<title>Website</title
 </head>
 <body>
-<h1>This is a suspicious header</h1>
-<img src="bmw.jpg" alt="BMW" height="300" width="300 border="25px">
-<p>Tarsier</p>
+	<p>First paragraph</p>
+	<p>everything</p>
+	<img src="bmw.jpg"></img>
 </body>
 </html>
