--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Website</title
+	<title>Website</title>
+	<style>
+	body{
+		background-color:pink;
+	}
+	</style>
+	<script>
+		alert("it worked");
+	</script>
 </head>
 <body>
 	<p>First paragraph</p>
