--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<title>Website</title>
 	<style>
 	body{
-		background-color:pink;
+		background-color:blue;
 	}
 	</style>
-	<script>
-		alert("it worked");
+	<script src="javafolder/validate.js">
+		
 	</script>
 </head>
 <body>
