--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Website</title>
 	<style>
 	body{
-		background-color:blue;
+		background-color:gray;
 	}
 	</style>
 	<script src="javafolder/validate.js">
@@ -14,6 +14,6 @@
 <body>
 	<p>First paragraph</p>
 	<p>everything</p>
-	<img src="bmw.jpg"></img>
+	<img src="bmw.jpg" height="300px" width="300px" border="15px"></img>
 </body>
 </html>
