--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 </head>
 <body>
 	<p>First paragraph</p>
+	<h1>First header</h1>
+	<h2>Slightly diffrent header</h2>
+	<table>
+		<th>Mercury</th>
+		<th>Venus<</th>
+		<tr>
+			<td>Planet?</td>
+			<td>Veryy farr</td>
+	</table>
 	<p>everything</p>
 	<img src="bmw.jpg" height="300px" width="300px" border="15px"></img>
 </body>
