--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<h2>Slightly diffrent header</h2>
 	<table>
 		<th>Mercury</th>
-		<th>Venus<</th>
+		<th>Venus</th>
 		<tr>
 			<td>Planet?</td>
 			<td>Veryy farr</td>
