--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
 			<td>Veryy farr</td>
 	</table>
 	<p>everything</p>
-	<img src="bmw.jpg" height="300px" width="300px" border="15px"></img>
+	<img src="bmw.jpg" height="300px" width="300px" border="15px">
 </body>
 </html>
