--- a/practice/terminal.html
+++ b/practice/terminal.html
@@ -23,8 +23,9 @@
 		<h6>Now lets say you saved a file...</h6>
 		<p>This is would be the proper way to present it to you.</p>
 		<p><samp>File saved succesfully.</samp></p>
-		<img src="bmw.jpg" alt="bmw" height="300" width="300">
+		<a href="https://www.bmwusa.com/" target="blank" color="blue"><img src="bmw.jpg" alt="bmw" height="300" width="300"></a>
 		<p>This is a cheeky picture.</p>
+		<p>Click it and see what happens</p>
 		<script src="desktop/website/javafolder/validate.js">
 
 		</script>
