--- a/practice/realtable.html
+++ b/practice/realtable.html
@@ -12,10 +12,11 @@ table, tr, th, td{
 	<p>This is my schedule in a table</p>
 	<table>
 		<tr cospan="3">
+			<td>Day</td>
 			<td>Period</td>
 			<td>Subject</td>
 		</tr>
-		<tr cospan"2">
+		<tr cospan"3">
 			<td rowspan="5">a</td>
 			<td rowspan="1">1</td>
 			<td rowspan="1">Webdesign</td>
@@ -27,6 +28,36 @@ table, tr, th, td{
 		<tr>
 			<td rowspan="1">3</td>
 			<td rowspan="1">Planning</td>
+		</tr>
+		<tr>
+			<td rowspan="1">4</td>
+			<td rowspan="1">Planning</td>
+		</tr>
+		<tr>
+			<td rowspan="1">5</td>
+			<td rowspan="1">Capstone</td>
+		</tr>
+		<tr> 
+			<td rowspan="5">b</td>
+			<td rowspan="1">1</td>
+			<td rowspan="1">Databases</td>
+		</tr>
+		<tr>
+			<td rowspan="1">2</td>
+			<td rowspan="1">Archers</td>
+		</tr>
+		<tr>
+			<td rowspan="1">3</td>
+			<td rowspan="1">Archers</td>
+		</tr>
+		<tr>
+			<td rowspan="1">4</td>
+			<td rowspan="1">Webdesign</td>
+		</tr>
+		<tr>
+			<td rowspan="1">1</td>
+			<td rowspan="1">Capstone</td>
+		</tr>
 	</table>
 	<body>
 	</body>
