--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
 			<td>Veryy farr</td>
 	</table>
 	<p>everything</p>
-	<img src="bmw.jpg" height="300px" width="300px" border="15px">
+	<img src="website/images/Elephant.png" alt="Elephant" src="bmw.jpg"
+	srcset="Elephant-small.png 200w,
+		Elephant-medium.png 400w,
+		Elephant-large.png 800w"
+	sizes="(max-width: 200px) 200vw,
+		(max-width: 800px) 400vw,
+		800vw">
 </body>
 </html>
