--- a/projects/recipes/index.html
+++ b/projects/recipes/index.html
@@ -5,6 +5,11 @@
 		<script src="../../javafolder/validate.js"></script>
 	</head>
 	<body>
+		<h3>Welcome to Louis's recipe page.</h3>
+		<p>This website consists of two recipe that are very healthy foods that you should eat.</p>
+		<p>Both of these recipes contain lots of bioavailable protein thats perfect for muscle growth a long with nutriesnts such as zinc,calcium, iron, magnesium, and vitamin b12. The ground beef recipe consists of all 9 amino acids need for your body to enter muscle protein synthesis and contians CLA which is a conjugated acid known to reduce the rates of heart disease, cancer, and diabetes.</p>
+		<br>
+		<p>Check out to two links below!</p>
 		<a href="1.html">Ground Beef</a>
 		<br>
 		<a href="2.html">Healthy Eggs</a>
