--- a/projects/recipes/index.html
+++ b/projects/recipes/index.html
@@ -6,10 +6,11 @@
 	</head>
 	<body>
 		<h3>Welcome to Louis's recipe page.</h3>
-		<p>This website consists of two recipe that are very healthy foods that you should eat.</p>
+		<h6>This website consists of two recipe that are very healthy foods that you should eat.</h6>
+		<h4>Description</h4>
 		<p>Both of these recipes contain lots of bioavailable protein thats perfect for muscle growth a long with nutriesnts such as zinc,calcium, iron, magnesium, and vitamin b12. The ground beef recipe consists of all 9 amino acids need for your body to enter muscle protein synthesis and contians CLA which is a conjugated acid known to reduce the rates of heart disease, cancer, and diabetes.</p>
 		<br>
-		<p>Check out to two links below!</p>
+		<h4>Recipes</h4>
 		<a href="1.html">Healthy Eggs</a>
 		<br>
 		<a href="2.html">Ground Beef</a>
