--- a/practice/zoo/animals.html
+++ b/practice/zoo/animals.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <title>Animal Exhibits</title>
     <script src="../js/init.js"></script>
+    <style>
+        table, td ,tr{
+        border: 1px solid black;
+        border-collapse: collapse;
+        }
+        body{
+                background-color: rgb(255,220,400);
+        }
+        </style>
 </head>
 <body>
     <header>
