--- a/practice/zoo/index.html
+++ b/practice/zoo/index.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Zoo Overview</title>
-    <script src="../js/init.js"></script>
+    <script src="../../js/init.js"></script>
+	<style>
+	table, td ,tr{
+	border: 1px solid black;
+	border-collapse: collapse;
+	}
+	body{
+		background-color: rgb(255,100,100);
+	}
+        </style>
 </head>
 <body>
     <header>
-        <h1>Welcome to the City Zoo</h1>
+        <h1 style="color:pink ">>Welcome to the City Zoo</h1>
         <p>Explore the wonders of wildlife at the City Zoo!</p>
     </header>
     <nav>
